--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                </div>
             </div>
     </section>
+    <section>
+        <h3 class="section-title">A summary of My Resume</h3>
+    </section>
 
 
 
