--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
                         commodo ligula eget dolor.</p>
                 </div>
         </div>
+        </div>
+        <p><div class="download-cv">
+            <button class="btn-primary">Download CV</button></p>
+        </div>
     </section>
-
-
-
-
    </main>
    <footer>
 
